--- a/19-intro-to-js/index.html
+++ b/19-intro-to-js/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <script src="index.js" charset="utf-8"></script>
+    <script src="./src/index.js" charset="utf-8"></script>
 
     <title>Intro To JS</title>
 </head>
